<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReciclaYa">

    <TextView
        android:id="@+id/textvuew_reciclaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/contenedor_gris"
        android:textColor="@color/gris"
        android:textStyle="bold"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="160dp"
            android:layout_height="152dp"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/grisrestos" />

        <TextView
            android:layout_width="366dp"
            android:layout_height="244dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/gris"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.566" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnsonido3"
            android:layout_width="61dp"
            android:layout_height="67dp"
            android:clickable="true"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.902"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976"
            app:srcCompat="@android:drawable/presence_audio_busy" />

        <Button
            style="@style/GreenText"
            android:id="@+id/bnt_atras"
            app:backgroundTint="@null"
            android:background="@drawable/btn_gris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atras" />


    </LinearLayout>
</LinearLayout>